# BioShell

./: .gitignore  Cargo.toml  README.md  build.rs  instruction.txt  katex-header.html  push.bat
bioshell-builder/: Cargo.toml
bioshell-builder/data/: bb_topo.cif
bioshell-builder/examples/: protein_backbone.rs
bioshell-builder/src/: builder_errors.rs  internal_coordinates_definitions.rs  kinematic_atom_tree.rs  lib.rs  nerf.rs
bioshell-builder/tests/: test_internal_definitions.rs  test_kinematic_atom_tree.rs  test_nerf.rs
bioshell-cartesians/: Cargo.toml
bioshell-cartesians/src/: builders.rs  calc_from_coordinates.rs  cartesian_montecarlo.rs  cartesian_system.rs  coordinates.rs  coordinates_view.rs  gyration_squared.rs  indie_functions.rs  lib.rs  macros.rs  movers.rs  nblist.rs  observers.rs  pdb_coordinates.rs  pdb_trajectory.rs  perm_chain_step.rs  r_end_squared.rs  random_chain.rs  trait_nb_list_rules.rs
bioshell-cartesians/tests/: test_cartesian_system.rs  test_coordinates.rs  test_coordinates_calculations.rs  test_neighborlist.rs
bioshell-chem/: Cargo.toml  lib.rs
bioshell-chem/src/: atom.rs  bond_types.rs  elements.rs  errors.rs  lib.rs  molecule.rs  molecule_loaders.rs  smiles.rs
bioshell-chem/tests/: test_bond_types.rs  test_kinematics.rs  test_molecule.rs  test_smiles.rs
bioshell-cif/: Cargo.toml
bioshell-cif/examples/: read_cif.rs
bioshell-cif/src/: cif_errors.rs  cif_line_iterator.rs  column_mapping.rs  lib.rs
bioshell-cif/tests/: test_cif.rs
bioshell-clustering/: Cargo.toml
bioshell-clustering/benches/: bench_clustering.rs
bioshell-clustering/examples/: estimate_multivariate_normal.rs  gmm.rs  kmeans.rs  optics.rs
bioshell-clustering/src/: distance.rs  em.rs  errors.rs  kd_tree.rs  kmeans.rs  lib.rs  optics.rs  points_set.rs
bioshell-clustering/tests/: test_clustering.rs  test_distance_matrix.rs  test_hierarchical.rs  test_trees.rs
bioshell-core/: Cargo.toml
bioshell-core/examples/: filter_fasta.rs  stockolm2fasta.rs
bioshell-core/src/: assertions.rs  has_cartesians.rs  lib.rs  matrix.rs  sequence.rs  utils.rs  vec3.rs
bioshell-core/tests/: test_chemical.rs  test_coordinates_calculations.rs  test_io.rs  test_matrix.rs  test_sequence.rs  test_vec3.rs
bioshell-dataframe/: Cargo.toml
bioshell-dataframe/src/: lib.rs  structure_dataframe.rs
bioshell-datastructures/: Cargo.toml
bioshell-datastructures/benches/: bench_kdtree.rs
bioshell-datastructures/pybioshell_datastructures/: Cargo.toml
bioshell-datastructures/src/: distance.rs  kd_tree.rs  lib.rs  tree.rs
bioshell-datastructures/tests/: test_kdtree.rs  test_trees.rs
bioshell-hbonds/: Cargo.toml
bioshell-hbonds/src/: backbone_hb_map.rs  lib.rs
bioshell-hbonds/tests/: test_backbone_hbonds.rs
bioshell-io/: Cargo.toml
bioshell-io/src/: lib.rs  split_into_strings.rs  utils.rs
bioshell-io/tests/: test_io.rs
bioshell-molgeom/: Cargo.toml
bioshell-molgeom/src/: lib.rs
bioshell-molgeom/tests/: test_crmsd.rs
bioshell-montecarlo/: Cargo.toml
bioshell-montecarlo/src/: acceptance_statistics.rs  adaptive_mc_protocol.rs  isothermal_mc.rs  lib.rs  metropolis_criterion.rs  montecarlo.rs  perm.rs  trait_acceptance_criterion.rs  trait_mover.rs  trait_sampler.rs  trait_stepwise_builder.rs  trait_stepwise_mover.rs
bioshell-montecarlo/tests/: test_movers.rs_
bioshell-numerical/: Cargo.toml  main.rs
bioshell-numerical/examples/: estimate_multivariate_normal.rs  gmm.rs  optics.rs
bioshell-numerical/src/: distance.rs  kinematics.rs  lib.rs  macros.rs  matrix.rs  rototranslation.rs  statistics.rs  testing_macros.rs  vec3.rs
bioshell-numerical/tests/: test_kinematics.rs  test_matrix.rs  test_rototranslation.rs
bioshell-oop-adt/: Cargo.toml
bioshell-pdb/: Cargo.toml  main.rs
bioshell-pdb/examples/: best_entity_chain.rs  count_D_aa.rs  distance_map.rs  read_pdb.rs
bioshell-pdb/src/: assertions.rs  cif_to_pdb.rs  crate_utils.rs  deposit.rs  entity.rs  exp_data.rs  has_cartesians.rs  lib.rs  ligands.rs  load_cif.rs  load_pdb.rs  pdb.rs  pdb_atom.rs  pdb_atom_filters.rs  pdb_atom_line_parser.rs  pdb_compound.rs  pdb_header.rs  pdb_helix.rs  pdb_helix_line_parser.rs  pdb_line_parser.rs  pdb_parsing_error.rs  pdb_sequence_of_residue.rs  pdb_sheet.rs  pdb_sheet_line_parser.rs  pdb_source.rs  pdb_title.rs  read_cif_monomer.rs  remarks.rs  residue_filters.rs  residue_id.rs  secondary_structure.rs  secondary_view.rs  structure.rs  unit_cell.rs
bioshell-pdb/tests/: test_cif_loading.rs  test_cif_monomer.rs  test_entity.rs  test_expdata.rs  test_kinematic_atom_tree.rs  test_loading_pdb.rs  test_matrix.rs  test_monomer_structures.rs  test_nerf.rs  test_pdb.rs  test_pdb.rs_  test_pdb_atom.rs  test_pdb_atom.rs_  test_pdb_atom_filters.rs  test_pdb_compounds.rs  test_pdb_header.rs  test_pdb_helix_parser.rs  test_pdb_line_parser.rs  test_pdb_line_parser.rs_  test_pdb_secondary.rs  test_pdb_sequence_of_residue.rs  test_pdb_sheet_parser.rs  test_pdb_source.rs  test_pdb_title.rs  test_remarks.rs  test_residue_filters.rs  test_rototranslation.rs  test_simple_geometric.rs  test_structure.rs  test_substructures.rs  test_vec3.rs
bioshell-seq/: Cargo.toml
bioshell-seq/examples/: analyse_family.rs  check_msa.rs  filter_fasta.rs  msa_tool.rs  needleman_wunsh.rs  stockolm2fasta.rs
bioshell-seq/src/: errors.rs  lib.rs
bioshell-seq/tests/: test_aligners.rs  test_bucket_clustering.rs  test_chemical.rs  test_msa.rs  test_msa_calc.rs  test_reporters.rs  test_seq_id.rs  test_sequence.rs  test_sequence_record.rs  test_substitution_matrix.rs
bioshell-sim/: Cargo.toml
bioshell-sim/src/: generators.rs  lib.rs
bioshell-statistics/: Cargo.toml
bioshell-statistics/examples/: hist2d.rs
bioshell-statistics/src/: autocorrelation.rs  descriptive.rs  distributions.rs  histogram_nd.rs  histograms.rs  lib.rs
bioshell-statistics/tests/: test_nd_histogram.rs  test_statistics.rs
bioshell-taxonomy/: Cargo.toml
bioshell-taxonomy/src/: lib.rs  rank.rs  taxonomy.rs  (+1 more)
pybioshell/: Cargo.toml  README.md  requirements.txt  requrements.txt
surpass/: Cargo.toml  l  surpass.rs
(+237 files in other folders)
