[package]
name = "bioshell"
version = "4.0.0-dev"
edition = "2021"
description = "Provides the BioShell 4.0 package"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[workspace]
members = [
    "bioshell-cartesians",
    "bioshell-clustering",
    "bioshell-core",
    "bioshell-dataframe",
    "bioshell-ff",
    "bioshell-montecarlo",
    "bioshell-numerical",
    "bioshell-pdb",
    "bioshell-oop-adt",
    "bioshell-sim",
    "bioshell-statistics",
]

[dependencies]
bioshell-cartesians = { path = "./bioshell-cartesians" }
bioshell-clustering = { path = "./bioshell-clustering" }
bioshell-core = { path = "./bioshell-core" }
bioshell-dataframe={path="./bioshell-dataframe"}
bioshell-ff = { path = "./bioshell-ff" }
bioshell-montecarlo = { path = "./bioshell-montecarlo" }
bioshell-numerical = { path = "./bioshell-numerical" }
bioshell-oop-adt={path="./bioshell-oop-adt"}
bioshell-pdb = { path = "./bioshell-pdb" }
bioshell-sim = { path = "./bioshell-sim" }
bioshell-statistics = { path = "./bioshell-statistics" }

clap = { version = "3.1.18", features = ["derive"] }
rand = { version = "0.8.5", features = [ "small_rng" ] }
rand_distr="0.4.3"
nalgebra = "0.31.1"

# ---------- Logging
log = "0.4.0"
env_logger = "0.9.0"

[[bin]]
name = "surpass_alfa"
path = "src/surpass_alfa.rs"



[package.metadata.docs.rs]
# To build locally use
#   RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = ["--html-in-header", "katex-header.html"]
