[package]
name = "bioshell"
version = "4.0.0-dev"
edition = "2021"
description = "Provides the BioShell 4.0 package"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[workspace]
members = [
    "bioshell-io",
    "bioshell-builder",
    "bioshell-seq",
    "bioshell-statistics",
    "bioshell-clustering",
    "bioshell-cif",
    "bioshell-pdb",
    "bioshell-datastructures",
    "surpass",
]

[dependencies]
bioshell-io = { path = "./bioshell-io" }
bioshell-seq = { path = "./bioshell-seq" }
bioshell-builder = { path = "./bioshell-builder" }
bioshell-pdb = { path = "./bioshell-pdb" }
bioshell-clustering = { path = "./bioshell-clustering" }
bioshell-statistics = { path = "./bioshell-statistics" }
bioshell-datastructures = { path = "./bioshell-datastructures"}
bioshell-cif = { path = "./bioshell-cif" }
surpass = { path = "./surpass" }
clap = { version = "3.1.18", features = ["derive"] }
rand = { version = "0.8.5", features = [ "small_rng" ] }
rand_distr="0.4.3"
nalgebra = "0.31.1"

# ---------- Logging
log = "0.4.0"
env_logger = "0.9.0"

#[[bin]]


[package.metadata.docs.rs]
# To build locally use
#   RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = ["--html-in-header", "katex-header.html"]
