
[package]
name = "bioshell-cartesians"
version = "4.0.0-dev"
edition = "2021"
description = "Cartesian coordinates used in simulations"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib"]

[dependencies]
rand="0.8.5"
bioshell-core = { path = "../bioshell-core" }
bioshell-sim = { path = "../bioshell-sim" }
bioshell-numerical = { path = "../bioshell-numerical" }
