
[package]
name = "bioshell-cartesians"
version = "4.0.0-dev"
edition = "2021"
description = "Cartesian coordinates used in simulations"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib"]

[dependencies]
rand="0.8.5"
bioshell-core = { path = "../bioshell-core" }
bioshell-sim = { path = "../bioshell-sim" }
bioshell-montecarlo = { path = "../bioshell-montecarlo" }
bioshell-numerical = { path = "../bioshell-numerical" }

# ---------- Logging
log = "0.4.0"
env_logger = "0.9.0"

[package.metadata.docs.rs]
# To build locally use
#   RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = ["--html-in-header", "katex-header.html"]
