
[package]
name = "bioshell-chem"
version = "4.0.0-dev"
edition = "2021"
description = "Library for chemical informatics in Rust."
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib", "cdylib"]

[dependencies]
bioshell-io = { path = "../bioshell-io" }   	# --- for file and string utilities
bioshell-cif = { path = "../bioshell-cif" }   	# --- for loading molecules from CIF files

clap = { version = "3.1.18", features = ["derive"] }
# ---------- Logging
log = "0.4.0"
env_logger = "0.9.0"
thiserror = "1.0.59"
petgraph = "0.8.3"

