
[package]
name = "bioshell-clustering"
version = "4.0.0-dev"
edition = "2021"
description = "Clustering methods"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib", "cdylib"]

#[[bench]]
#name = "bench_clustering"
#harness = false

[dependencies]
rand = {version = "0.8.5", features = [ "small_rng" ]}
rand_distr="0.4.3"
nalgebra = "0.31.1"
clap = { version = "3.1.18", features = ["derive"] }
num-traits = "0.2"      # for Float trait

bioshell-statistics = { path = "../bioshell-statistics" }
bioshell-core = { path = "../bioshell-core" }
bioshell-datastructures = { path = "../bioshell-datastructures" }

bioshell-numerical = { path = "../bioshell-numerical"}
