
[package]
name = "bioshell-core"
version = "4.0.0-dev"
edition = "2021"
description = "Provides core functionality for BioShell package: data types, I/O, etc."
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib"]

[dependencies]
bioshell-numerical = { path = "../bioshell-numerical" }
clap = { version = "3.1.18", features = ["derive"] }
csv = "1.1"
flate2 = "1.0"

# ---------- Logging
log = "0.4.0"
env_logger = "0.9.0"


