
[package]
name = "bioshell-datastructures"
version = "4.0.0-dev"
edition = "2021"
description = "Trees and graphs, really"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib", "cdylib"]

[[bench]]
name = "bench_kdtree"
harness = false

[dependencies]
rand = {version = "0.8.5", features = [ "small_rng" ]}
rand_distr="0.4.3"
clap = { version = "3.1.18", features = ["derive"] }
