
[package]
name = "bioshell-io"
version = "4.0.0-dev"
edition = "2021"
description = "Provides I/O utility functions commonly used by other BioShell v.4 crates"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib"]

[dependencies]
bioshell-numerical = { path = "../bioshell-numerical" }
csv = "1.1"
flate2 = "1.0"

# ---------- Logging
log = "0.4.0"
env_logger = "0.9.0"


