[package]
name = "bioshell-molgeom"
version = "4.0.0-dev"
edition = "2021"
description = "Performs calculations on biomacromolecular structures, mainly proteins."
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
bioshell-pdb = { path = "../bioshell-pdb" }
bioshell-seq = { path = "../bioshell-seq" }
bioshell-cif = { path = "../bioshell-cif" }
bioshell-io  = { path = "../bioshell-io" } 	# for split_into_strings() and I/O functions

clap = { version = "4.5.20", features = ["derive"] }
thiserror = "1.0.26"
itertools = "0.11.0"
log = "0.4.17"
env_logger = "0.11.5"# for logging
nalgebra = "0.31.1" # for helical axis and crmsd
serde_json = "1.0.149"
rand = { version = "0.8.5", features = [ "small_rng" ] }
rand_distr="0.4.3"

[build-dependencies]
# ---------- for git md5sum and compilation time
chrono = "0.4"
git2 = "0.19.0"
md5 = "0.7"

