
[package]
name = "bioshell-montecarlo"
version = "4.0.0-dev"
edition = "2021"
description = "Monte Carlo sampling algorithms"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib"]

[dependencies]
rand="0.8.5"
bioshell-sim = { path = "../bioshell-sim" }

