
[package]
name = "bioshell-montecarlo"
version = "4.0.0-dev"
edition = "2021"
description = "Monte Carlo sampling algorithms"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib"]

[dependencies]
rand = { version = "0.8.5", features = [ "small_rng" ] }
bioshell-sim = { path = "../bioshell-sim" }

# ---------- Logging
log = "0.4.0"
env_logger = "0.9.0"

[package.metadata.docs.rs]
# To build locally use
#   RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = ["--html-in-header", "katex-header.html"]
