
[package]
name = "bioshell_numerical"
version = "4.0.0-dev"
edition = "2021"
description = "Provides core functionality for BioShell package"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib", "cdylib"]

[dependencies]
rand = {version = "0.8.5", features = [ "small_rng" ]}
rand_distr="0.4.3"
nalgebra = "0.31.1"
clap = { version = "3.1.18", features = ["derive"] }
bioshell-core = { path = "../bioshell-core" }

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]