
[package]
name = "bioshell-numerical"
version = "4.0.0-dev"
edition = "2021"
description = "Provides core numerical types and functions that operates on them that are essential for BioShell package"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib", "cdylib"]

[dependencies]
rand = { version = "0.8.5", features = [ "small_rng" ] }
clap = { version = "3.1.18", features = ["derive"] }
rand_distr = {}   # for NormalDistribution

[[bin]]
name="bioshell_numerical_output"
path="main.rs"
