[package]
name = "bioshell-pdb"
version = "4.0.0-dev"
edition = "2021"
description = "Provides struct that holds biomacromolecular structures, loaded from a PDB or mmCIF file"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
bioshell-seq= { path = "../bioshell-seq" }

clap = { version = "3.1.18", features = ["derive"] }
thiserror = "1.0.26"
itertools = "0.11.0"
rand = { version = "0.8.5", features = [ "small_rng" ] }
rand_distr = {}   # for NormalDistribution, used by random_point_nearby()

#[[bin]]
