[package]
name = "bioshell-pdb"
version = "4.0.0-dev"
edition = "2021"
description = "Provides struct that holds biomacromolecular structures, loaded from a PDB or mmCIF file"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
bioshell-seq = { path = "../bioshell-seq" }
bioshell-cif = { path = "../bioshell-cif" }
bioshell-io  = { path = "../bioshell-io" } 	# for split_into_strings() and I/O functions

clap = { version = "3.1.18", features = ["derive"] }
thiserror = "1.0.26"
itertools = "0.11.0"
rand = { version = "0.8.5", features = [ "small_rng" ] }
rand_distr="0.4.3"
log = "0.4.17"
env_logger = "0.9.3"# for logging
once_cell = "1.13"  # for once_cell::sync::Lazy

[build-dependencies]
# ---------- for git md5sum and compilation time
chrono = "0.4"
git2 = "0.19.0"
md5 = "0.7"

[[bin]]
name = "pdb_tool"
path = "src/bin/pdb_tool.rs"