
[package]
name = "bioshell-seq"
version = "4.0.0-dev"
edition = "2021"
description = "Handles biological sequences"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib"]

[dependencies]
bioshell-io = { path = "../bioshell-io" }
clap = { version = "3.1.18", features = ["derive"] }
thiserror = "1.0"
displaydoc = "0.2"

# ---------- Logging
log = "0.4.0"
env_logger = "0.9.0"


