
[package]
name = "bioshell-seq"
version = "4.0.0-dev"
edition = "2021"
description = "Handles biological sequences"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib"]

[dependencies]
bioshell-io = { path = "../bioshell-io" }
bioshell-statistics = { path = "../bioshell-statistics" }

clap = { version = "4.5.20", features = ["derive"] }
thiserror = "1.0"
displaydoc = "0.2"

# ---------- Logging
log = "0.4.17"
env_logger = "0.11.5"
once_cell = "1.19.0"
regex = "1.11.0"


