
[package]
name = "bioshell-sim"
version = "4.0.0-dev"
edition = "2021"
description = "Provides biomacromolecular simulation methods"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib"]

[dependencies]
bioshell-numerical = { path = "../bioshell-numerical" }
bioshell-ff = { path = "../bioshell-ff" }

