
[package]
name = "bioshell-statistics"
version = "4.0.0-dev"
edition = "2021"
description = "Statistical calculations utilised by BioShell package"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib", "cdylib"]

[dependencies]
bioshell-io = { path = "../bioshell-io" }
rand = {version = "0.8.5", features = [ "small_rng" ]}
rand_distr="0.4.3"
clap = { version = "3.1.18", features = ["derive"] }
nalgebra = "0.31.1"
rustfft = "6.0"

# ---------- Logging
log = "0.4.0"
env_logger = "0.9.0"

[[bin]]
name = "acorr"
path = "src/bin/acorr.rs"