[package]
name = "pybioshell"
version = "0.1.0"
edition = "2021"

[lib]
name = "bioshell"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
bioshell-seq = { path = "../bioshell-seq" }
bioshell-taxonomy = { path = "../bioshell-taxonomy" }
once_cell = "1.19.0"


[package.metadata.maturin]
name = "pybioshell"

