
[package]
name = "surpass"
version = "4.0.0-dev"
edition = "2021"
description = "SURPASS-alfa: coarse grained simulations of protein systems"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell"]

[lib]
crate-type =["rlib", "cdylib"]

#[[bench]]
#name = "bench_clustering"
#harness = false

[dependencies]
rand = {version = "0.8.5", features = [ "small_rng" ]}
rand_distr="0.4.3"
clap = { version = "3.1.18", features = ["derive"] }
num-traits = "0.2"      # for Float trait

bioshell-statistics = { path = "../bioshell-statistics" }
bioshell-io = { path = "../bioshell-io" }
bioshell-pdb = { path = "../bioshell-pdb" }

# ---------- Logging
log = "0.4.0"
env_logger = "0.9.0"

[[bin]]
name = "surpass"
path = "surpass.rs"